--- a/components/sass/_weekdays.scss
+++ b/components/sass/_weekdays.scss
@@ -135,6 +135,7 @@ p.no-mtgs {
 	border-bottom: 1px solid transparent;
 	border-left: 1px solid transparent;
 	color: inherit;
+	line-height: 1.5em;
 	&:hover {
 		background-color: rgba(0,0,0,0.2);
 	}
@@ -142,14 +143,10 @@ p.no-mtgs {
 		display: flex;
 		flex: 1;
 	}
-	.glance-mtg-time,
-	.glance-group-title {
-		// padding-right: 10px;
-	}
 	.glance-group-title {
 		flex: 2;
 		padding: 0em 0.5em;
-		line-height: 1.5em;
+		// line-height: 1.5em;
 	}
 	.glance-mtg-type {
 		justify-content: flex-end;
