--- a/components/sass/_weekdays.scss
+++ b/components/sass/_weekdays.scss
@@ -623,6 +623,9 @@ a.zoom {
     cursor: pointer;
   }
 }
+a.ot {
+	margin: 0.5em 0 1em;
+}
 a.zoom-id.copied {
 	background-color: #86e483;
 	color: #106f0e;
