--- a/style-expanded.css
+++ b/style-expanded.css
@@ -1284,6 +1284,10 @@ a.zoom:hover {
   cursor: pointer;
 }
 
+a.ot {
+  margin: 0.5em 0 1em;
+}
+
 a.zoom-id.copied {
   background-color: #86e483;
   color: #106f0e;
@@ -1643,6 +1647,7 @@ div#success-wrap span.success-msg {
   }
 }
 a#toggle-lat-long-msg,
+a#toggle-one-tap-msg,
 a#toggle-descriptive-location,
 a#toggle-pdf-info,
 a#toggle-link-label,
@@ -1652,6 +1657,7 @@ a#gottajoin {
   color: #5dcb5d;
 }
 a#toggle-lat-long-msg:hover,
+a#toggle-one-tap-msg:hover,
 a#toggle-descriptive-location:hover,
 a#toggle-pdf-info:hover,
 a#toggle-link-label:hover,
@@ -1691,6 +1697,7 @@ a#gmaps:hover {
 #msg-one,
 #gottajoin,
 #lat-long,
+#one-tap,
 #desc-loc,
 #pdf-upload,
 #link-label,
@@ -1717,6 +1724,7 @@ a#gmaps:hover {
 #msg-one .msg-bkg,
 #gottajoin .msg-bkg,
 #lat-long .msg-bkg,
+#one-tap .msg-bkg,
 #desc-loc .msg-bkg,
 #pdf-upload .msg-bkg,
 #link-label .msg-bkg,
@@ -1739,6 +1747,7 @@ a#gmaps:hover {
 #msg-one .inside-msg-one,
 #gottajoin .inside-msg-one,
 #lat-long .inside-msg-one,
+#one-tap .inside-msg-one,
 #desc-loc .inside-msg-one,
 #pdf-upload .inside-msg-one,
 #link-label .inside-msg-one,
@@ -1755,6 +1764,7 @@ a#gmaps:hover {
 #msg-one .inside-msg-one ul,
 #gottajoin .inside-msg-one ul,
 #lat-long .inside-msg-one ul,
+#one-tap .inside-msg-one ul,
 #desc-loc .inside-msg-one ul,
 #pdf-upload .inside-msg-one ul,
 #link-label .inside-msg-one ul,
@@ -1767,6 +1777,7 @@ a#gmaps:hover {
 #msg-one .inside-msg-one ul li,
 #gottajoin .inside-msg-one ul li,
 #lat-long .inside-msg-one ul li,
+#one-tap .inside-msg-one ul li,
 #desc-loc .inside-msg-one ul li,
 #pdf-upload .inside-msg-one ul li,
 #link-label .inside-msg-one ul li,
@@ -1778,6 +1789,7 @@ a#gmaps:hover {
 #msg-one .inside-msg-one ul li em,
 #gottajoin .inside-msg-one ul li em,
 #lat-long .inside-msg-one ul li em,
+#one-tap .inside-msg-one ul li em,
 #desc-loc .inside-msg-one ul li em,
 #pdf-upload .inside-msg-one ul li em,
 #link-label .inside-msg-one ul li em,
@@ -1791,6 +1803,7 @@ a#gmaps:hover {
 #msg-one .inside-msg-one > i,
 #gottajoin .inside-msg-one > i,
 #lat-long .inside-msg-one > i,
+#one-tap .inside-msg-one > i,
 #desc-loc .inside-msg-one > i,
 #pdf-upload .inside-msg-one > i,
 #link-label .inside-msg-one > i,
@@ -1806,6 +1819,7 @@ a#gmaps:hover {
 #msg-one .inside-msg-one i.fa-peace,
 #gottajoin .inside-msg-one i.fa-peace,
 #lat-long .inside-msg-one i.fa-peace,
+#one-tap .inside-msg-one i.fa-peace,
 #desc-loc .inside-msg-one i.fa-peace,
 #pdf-upload .inside-msg-one i.fa-peace,
 #link-label .inside-msg-one i.fa-peace,
@@ -1817,6 +1831,7 @@ a#gmaps:hover {
 #msg-one .inside-msg-one p.peace-sign,
 #gottajoin .inside-msg-one p.peace-sign,
 #lat-long .inside-msg-one p.peace-sign,
+#one-tap .inside-msg-one p.peace-sign,
 #desc-loc .inside-msg-one p.peace-sign,
 #pdf-upload .inside-msg-one p.peace-sign,
 #link-label .inside-msg-one p.peace-sign,
@@ -1829,6 +1844,7 @@ a#gmaps:hover {
 #msg-one .inside-msg-one > h1,
 #gottajoin .inside-msg-one > h1,
 #lat-long .inside-msg-one > h1,
+#one-tap .inside-msg-one > h1,
 #desc-loc .inside-msg-one > h1,
 #pdf-upload .inside-msg-one > h1,
 #link-label .inside-msg-one > h1,
@@ -1842,6 +1858,7 @@ a#gmaps:hover {
 #msg-one .inside-msg-one p,
 #gottajoin .inside-msg-one p,
 #lat-long .inside-msg-one p,
+#one-tap .inside-msg-one p,
 #desc-loc .inside-msg-one p,
 #pdf-upload .inside-msg-one p,
 #link-label .inside-msg-one p,
@@ -1855,6 +1872,7 @@ a#gmaps:hover {
 #msg-one .inside-msg-one > hr,
 #gottajoin .inside-msg-one > hr,
 #lat-long .inside-msg-one > hr,
+#one-tap .inside-msg-one > hr,
 #desc-loc .inside-msg-one > hr,
 #pdf-upload .inside-msg-one > hr,
 #link-label .inside-msg-one > hr,
@@ -1867,6 +1885,7 @@ a#gmaps:hover {
 #msg-one .inside-msg-one a.pdf,
 #gottajoin .inside-msg-one a.pdf,
 #lat-long .inside-msg-one a.pdf,
+#one-tap .inside-msg-one a.pdf,
 #desc-loc .inside-msg-one a.pdf,
 #pdf-upload .inside-msg-one a.pdf,
 #link-label .inside-msg-one a.pdf,
@@ -1879,6 +1898,7 @@ a#gmaps:hover {
 #msg-one .inside-msg-one a.pdf:hover,
 #gottajoin .inside-msg-one a.pdf:hover,
 #lat-long .inside-msg-one a.pdf:hover,
+#one-tap .inside-msg-one a.pdf:hover,
 #desc-loc .inside-msg-one a.pdf:hover,
 #pdf-upload .inside-msg-one a.pdf:hover,
 #link-label .inside-msg-one a.pdf:hover,
@@ -1890,6 +1910,7 @@ a#gmaps:hover {
 #msg-one .inside-msg-one p.info-links,
 #gottajoin .inside-msg-one p.info-links,
 #lat-long .inside-msg-one p.info-links,
+#one-tap .inside-msg-one p.info-links,
 #desc-loc .inside-msg-one p.info-links,
 #pdf-upload .inside-msg-one p.info-links,
 #link-label .inside-msg-one p.info-links,
@@ -1911,6 +1932,7 @@ a#gmaps:hover {
 #msg-one .inside-msg-one p.info-links > a,
 #gottajoin .inside-msg-one p.info-links > a,
 #lat-long .inside-msg-one p.info-links > a,
+#one-tap .inside-msg-one p.info-links > a,
 #desc-loc .inside-msg-one p.info-links > a,
 #pdf-upload .inside-msg-one p.info-links > a,
 #link-label .inside-msg-one p.info-links > a,
@@ -1940,6 +1962,7 @@ a#gmaps:hover {
 #msg-one .inside-msg-one p.info-links > a:hover,
 #gottajoin .inside-msg-one p.info-links > a:hover,
 #lat-long .inside-msg-one p.info-links > a:hover,
+#one-tap .inside-msg-one p.info-links > a:hover,
 #desc-loc .inside-msg-one p.info-links > a:hover,
 #pdf-upload .inside-msg-one p.info-links > a:hover,
 #link-label .inside-msg-one p.info-links > a:hover,
@@ -1951,6 +1974,7 @@ a#gmaps:hover {
 #msg-one .inside-msg-one p.aa-link,
 #gottajoin .inside-msg-one p.aa-link,
 #lat-long .inside-msg-one p.aa-link,
+#one-tap .inside-msg-one p.aa-link,
 #desc-loc .inside-msg-one p.aa-link,
 #pdf-upload .inside-msg-one p.aa-link,
 #link-label .inside-msg-one p.aa-link,
@@ -1962,6 +1986,7 @@ a#gmaps:hover {
 #msg-one .inside-msg-one a.bingo,
 #gottajoin .inside-msg-one a.bingo,
 #lat-long .inside-msg-one a.bingo,
+#one-tap .inside-msg-one a.bingo,
 #desc-loc .inside-msg-one a.bingo,
 #pdf-upload .inside-msg-one a.bingo,
 #link-label .inside-msg-one a.bingo,
@@ -1975,6 +2000,7 @@ a#gmaps:hover {
 #msg-one .inside-msg-one a.bingo:hover,
 #gottajoin .inside-msg-one a.bingo:hover,
 #lat-long .inside-msg-one a.bingo:hover,
+#one-tap .inside-msg-one a.bingo:hover,
 #desc-loc .inside-msg-one a.bingo:hover,
 #pdf-upload .inside-msg-one a.bingo:hover,
 #link-label .inside-msg-one a.bingo:hover,
@@ -1986,6 +2012,7 @@ a#gmaps:hover {
 #msg-one .inside-msg-one p.daccaa-ctr,
 #gottajoin .inside-msg-one p.daccaa-ctr,
 #lat-long .inside-msg-one p.daccaa-ctr,
+#one-tap .inside-msg-one p.daccaa-ctr,
 #desc-loc .inside-msg-one p.daccaa-ctr,
 #pdf-upload .inside-msg-one p.daccaa-ctr,
 #link-label .inside-msg-one p.daccaa-ctr,
@@ -1999,6 +2026,7 @@ a#gmaps:hover {
 #msg-one .inside-msg-one a.daccaa,
 #gottajoin .inside-msg-one a.daccaa,
 #lat-long .inside-msg-one a.daccaa,
+#one-tap .inside-msg-one a.daccaa,
 #desc-loc .inside-msg-one a.daccaa,
 #pdf-upload .inside-msg-one a.daccaa,
 #link-label .inside-msg-one a.daccaa,
@@ -2017,6 +2045,7 @@ a#gmaps:hover {
 #msg-one .inside-msg-one a.daccaa:hover,
 #gottajoin .inside-msg-one a.daccaa:hover,
 #lat-long .inside-msg-one a.daccaa:hover,
+#one-tap .inside-msg-one a.daccaa:hover,
 #desc-loc .inside-msg-one a.daccaa:hover,
 #pdf-upload .inside-msg-one a.daccaa:hover,
 #link-label .inside-msg-one a.daccaa:hover,
@@ -2038,6 +2067,7 @@ a.youtube:hover {
 @media screen and (max-width: 800px) {
   #msg-one .msg-bkg,
   #lat-long .msg-bkg,
+  #one-tap .msg-bkg,
   #desc-loc .msg-bkg,
   #pdf-upload .msg-bkg,
   #link-label .msg-bkg,
@@ -2050,6 +2080,7 @@ a.youtube:hover {
   }
   #msg-one .inside-msg-one,
   #lat-long .inside-msg-one,
+  #one-tap .inside-msg-one,
   #desc-loc .inside-msg-one,
   #pdf-upload .inside-msg-one,
   #link-label .inside-msg-one,
@@ -2060,6 +2091,7 @@ a.youtube:hover {
   }
   #msg-one .inside-msg-one > i,
   #lat-long .inside-msg-one > i,
+  #one-tap .inside-msg-one > i,
   #desc-loc .inside-msg-one > i,
   #pdf-upload .inside-msg-one > i,
   #link-label .inside-msg-one > i,
@@ -2069,6 +2101,7 @@ a.youtube:hover {
   }
   #msg-one .inside-msg-one p.info-links,
   #lat-long .inside-msg-one p.info-links,
+  #one-tap .inside-msg-one p.info-links,
   #desc-loc .inside-msg-one p.info-links,
   #pdf-upload .inside-msg-one p.info-links,
   #link-label .inside-msg-one p.info-links,
@@ -2079,6 +2112,7 @@ a.youtube:hover {
 @media screen and (max-width: 390px) {
   #msg-one .inside-msg-one p.aa-link,
   #lat-long .inside-msg-one p.aa-link,
+  #one-tap .inside-msg-one p.aa-link,
   #desc-loc .inside-msg-one p.aa-link,
   #pdf-upload .inside-msg-one p.aa-link,
   #link-label .inside-msg-one p.aa-link,
