--- a/components/sass/_manage.scss
+++ b/components/sass/_manage.scss
@@ -1329,17 +1329,17 @@ form#manage-mtg {
 	a.map-dir {
 		// padding: 1.5em;
 	}
-	a.zoom {
-		padding: 1.5em 1em;
-		width: 90%;
-		display: block;
-		margin: 0 auto;
-	}
-	.zoom-id {
-		width: 50%;
-		min-width: 250px;
-		padding: 0.75em 0.5em 0.75em 1em;
-	}
+	// a.zoom {
+	// 	padding: 1.5em 1em;
+	// 	width: 90%;
+	// 	display: block;
+	// 	margin: 0 auto;
+	// }
+	// .zoom-id {
+	// 	width: 50%;
+	// 	min-width: 250px;
+	// 	padding: 0.75em 0.5em 0.75em 1em;
+	// }
 }
 span.contact-update-message {
   width: 100%;
