--- a/components/sass/_manage.scss
+++ b/components/sass/_manage.scss
@@ -189,6 +189,7 @@ form.email-updates {
 	}
 	input[type="checkbox"],
 	label {
+		color: #f18282;
 		cursor: pointer;
 	}
 	input[type="checkbox"]:checked + label {
