--- a/components/sass/_weekdays.scss
+++ b/components/sass/_weekdays.scss
@@ -254,6 +254,7 @@ p.no-mtgs {
 			border-bottom-left-radius: 10px;
 			border-top-left-radius: 0px;
 			margin-top: 0.5em;
+			word-break: break-word;
 			& > p {
 				text-align: left;
 			}
