clean up + new verification email
now have message and redirect to login.php if someone tries to access manage.php or any of the other "logged-in" pages without being logged in. - also various clean up sitewide to eliminate error messages.

--- a/components/sass/_login.scss
+++ b/components/sass/_login.scss
@@ -152,6 +152,22 @@
 			margin-bottom: 0.5em;
 		}
 	}
+
+	.fpwd {
+		font-size: 0.8em;
+		text-align: center;
+		color: #fff;
+		a {
+			color: #fff;
+			text-decoration: underline;
+			&:hover {
+				text-decoration: none;
+			}
+		}
+	}
+
+
+
 }
 
 .rm-wrap {
