--- a/components/sass/_user-management.scss
+++ b/components/sass/_user-management.scss
@@ -156,7 +156,15 @@
 	padding: 1em;
 	height: 8em;
 }
-
+h1.usr-role-mtg {
+	width: 100%;
+	max-width: 900px;
+	text-align: left;
+	font-size: 1.25em;
+	margin-top: 0.5em;
+	padding: 0em 0.25em;
+	border-bottom: 1px solid #fff;
+}
 
 
 
