--- a/components/sass/_manage.scss
+++ b/components/sass/_manage.scss
@@ -213,6 +213,7 @@ form.admin-email-form {
 		text-align: right;
 		display: flex;
 		justify-content: flex-end;
+		justify-content: space-around;
 		a {
 			cursor: pointer;
 			text-align: center;
