Squared close button on modals
and corrected width restriction on Privacy & Decorum note that wasn't included in the rest of the IDs in CSS.

--- a/components/sass/_msg-one.scss
+++ b/components/sass/_msg-one.scss
@@ -207,7 +207,8 @@ a.youtube {
   #desc-loc,
   #pdf-upload,
   #link-label,
-  #role-key {
+  #role-key, 
+  #mb-notes {
     .msg-bkg {
       justify-content: flex-start;
       overflow-y: auto;
@@ -242,7 +243,8 @@ a.youtube {
   #desc-loc,
   #pdf-upload,
   #link-label,
-  #role-key {
+  #role-key,
+  #mb-notes {
     .msg-bkg {
       // padding: 0px;
     }
