--- a/components/sass/_email-host-modal.scss
+++ b/components/sass/_email-host-modal.scss
@@ -32,19 +32,28 @@ body.noscrollz {
 
 /* The Close Button */
 .closefp {
-  color: #313131;
-  color: #cd3333;
+  // color: #313131;
+  color: #fff;
   float: right;
-  margin-top: -0.2em;
-  font-size: 1.5em;
+  margin-top: -0.25em;
+  margin-right: -0.2em;
+  font-size: 1.25em;
   font-weight: bold;
-  background-color: #fff;
-  border-radius: 50%;
+  background-color: rgba(255,255,255,0.3);
+  padding: 0.25em 0.15em;
+  border-radius: 5px;
+  transition: all 0.2s ease;
   &:hover,
   &:focus {
-    color: black;
+    color: white;
     text-decoration: none;
+    background-color: rgba(205,51,51,1);
     cursor: pointer;
+  }
+}
+@media screen and (max-width: 800px) {
+  .closefp {
+    font-size: 1em;
   }
 }
 
