--- a/components/sass/_manage.scss
+++ b/components/sass/_manage.scss
@@ -620,6 +620,7 @@ a.manage-delete {
 		.details-left {
 			display: flex;
 			flex-direction: column;
+      align-self: flex-start;
 			width: 50%;
 			padding: 1em;
 			border-right: 1px solid rgba(255,255,255,0.2);
