--- a/style-expanded.css
+++ b/style-expanded.css
@@ -2537,6 +2537,63 @@ p.logins {
   font-family: 'Courier Prime', monospace;
 }
 
+#login-form #login-alert.errors-present {
+  font-family: 'Courier Prime', monospace;
+  color: #fff;
+  width: 100%;
+  text-align: center;
+  border: 1px solid transparent;
+  text-align: left;
+  background-color: #ff4c4c;
+  padding: 20px;
+  margin-bottom: 1em;
+  border: 1px solid #f02222;
+}
+#login-form #login-alert.errors-present ul {
+  margin-left: 20px;
+}
+#login-form #login-alert.errors-present ul li {
+  list-style-type: disc;
+}
+#login-form #login-btn {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center;
+  width: 100%;
+  border: 1px solid #fff;
+  margin: 0.5em 0 1em;
+  cursor: pointer;
+  transition: all 0.2s ease;
+}
+#login-form #login-btn .login-txt {
+  background-color: rgba(0, 0, 0, 0.2);
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center;
+  width: 100%;
+  height: 2.5em;
+}
+#login-form #login-btn .login-txt:hover {
+  background-color: #000;
+}
+#login-form #login-btn .login-verify {
+  background-color: #000;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center;
+  width: 100%;
+  height: 2.5em;
+}
+
 a.signup-link {
   color: #fff;
   text-decoration: none;
