--- a/style-expanded.css
+++ b/style-expanded.css
@@ -2537,8 +2537,14 @@ p.logins {
   font-family: 'Courier Prime', monospace;
 }
 
+#login-form #hidethis,
+#signup-form #hidethis,
+#forgotpass-form #hidethis {
+  display: none;
+}
 #login-form #login-alert,
-#signup-form #login-alert {
+#signup-form #login-alert,
+#forgotpass-form #login-alert {
   font-family: 'Courier Prime', monospace;
   color: #fff;
   width: 100%;
@@ -2547,38 +2553,56 @@ p.logins {
   text-align: left;
 }
 #login-form #login-alert ul,
-#signup-form #login-alert ul {
+#signup-form #login-alert ul,
+#forgotpass-form #login-alert ul {
   margin-left: 20px;
 }
 #login-form #login-alert ul li,
-#signup-form #login-alert ul li {
+#signup-form #login-alert ul li,
+#forgotpass-form #login-alert ul li {
   list-style-type: disc;
 }
 #login-form #login-alert.red,
-#signup-form #login-alert.red {
+#signup-form #login-alert.red,
+#forgotpass-form #login-alert.red {
   background-color: #ff4c4c;
   padding: 20px;
   margin-bottom: 1em;
   border: 1px solid #f02222;
 }
 #login-form #login-alert.blue,
-#signup-form #login-alert.blue {
+#signup-form #login-alert.blue,
+#forgotpass-form #login-alert.blue {
   background-color: #386ab4;
   padding: 20px;
   margin-bottom: 1em;
   border: 1px solid #0f356d;
 }
 #login-form #login-alert.orange,
-#signup-form #login-alert.orange {
+#signup-form #login-alert.orange,
+#forgotpass-form #login-alert.orange {
   background-color: #d08b1f;
   padding: 20px;
   margin-bottom: 1em;
   border: 1px solid #ff9c00;
 }
+#login-form #login-alert.green,
+#signup-form #login-alert.green,
+#forgotpass-form #login-alert.green {
+  background-color: #139f19;
+  padding: 20px;
+  margin-bottom: 1em;
+  border: 1px solid #09f514;
+}
 #login-form #login-btn,
 #login-form #signup-btn,
+#login-form #forgotpass-btn,
 #signup-form #login-btn,
-#signup-form #signup-btn {
+#signup-form #signup-btn,
+#signup-form #forgotpass-btn,
+#forgotpass-form #login-btn,
+#forgotpass-form #signup-btn,
+#forgotpass-form #forgotpass-btn {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: center;
@@ -2593,8 +2617,13 @@ p.logins {
 }
 #login-form #login-btn .login-txt,
 #login-form #signup-btn .login-txt,
+#login-form #forgotpass-btn .login-txt,
 #signup-form #login-btn .login-txt,
-#signup-form #signup-btn .login-txt {
+#signup-form #signup-btn .login-txt,
+#signup-form #forgotpass-btn .login-txt,
+#forgotpass-form #login-btn .login-txt,
+#forgotpass-form #signup-btn .login-txt,
+#forgotpass-form #forgotpass-btn .login-txt {
   background-color: rgba(0, 0, 0, 0.2);
   display: -ms-flexbox;
   display: flex;
@@ -2607,14 +2636,24 @@ p.logins {
 }
 #login-form #login-btn .login-txt:hover,
 #login-form #signup-btn .login-txt:hover,
+#login-form #forgotpass-btn .login-txt:hover,
 #signup-form #login-btn .login-txt:hover,
-#signup-form #signup-btn .login-txt:hover {
+#signup-form #signup-btn .login-txt:hover,
+#signup-form #forgotpass-btn .login-txt:hover,
+#forgotpass-form #login-btn .login-txt:hover,
+#forgotpass-form #signup-btn .login-txt:hover,
+#forgotpass-form #forgotpass-btn .login-txt:hover {
   background-color: #000;
 }
 #login-form #login-btn .login-verify,
 #login-form #signup-btn .login-verify,
+#login-form #forgotpass-btn .login-verify,
 #signup-form #login-btn .login-verify,
-#signup-form #signup-btn .login-verify {
+#signup-form #signup-btn .login-verify,
+#signup-form #forgotpass-btn .login-verify,
+#forgotpass-form #login-btn .login-verify,
+#forgotpass-form #signup-btn .login-verify,
+#forgotpass-form #forgotpass-btn .login-verify {
   background-color: #000;
   display: -ms-flexbox;
   display: flex;
