--- a/components/sass/_login.scss
+++ b/components/sass/_login.scss
@@ -396,9 +396,23 @@ p.logins {
 
 #login-form,
 #signup-form,
-#forgotpass-form {
+#forgotpass-form,
+#resetpass-form {
   #hidethis {
     display: none;
+  }
+  a.fp-link {
+    color: #fff;
+    text-decoration: none;
+    transition: all 0.2s ease;
+    padding: 2px 10px;
+    border: 1px solid transparent;
+    background-color: #cd2b2b;
+    &:hover {
+      text-decoration: none;
+      background-color: transparent;
+      border: 1px solid #fff;
+    }
   }
   #login-alert {
     font-family: 'Courier Prime', monospace; 
@@ -407,6 +421,7 @@ p.logins {
     text-align: center;
     border: 1px solid transparent;
     text-align: left;
+    background-color: transparent;
     ul {
       margin-left: 20px;
       li {
@@ -414,33 +429,54 @@ p.logins {
       }
     }
   }
+  #login-alert.fade {
+    background-color: blue;
+    padding: 20px;
+    margin-bottom: 1em;
+    border: 1px solid transparent;
+    border-radius: 5px;
+    transition: background-color 1s ease, border-radius 1.5s ease, border 1.5s ease;
+  }
   #login-alert.red {
     background-color: #ff4c4c;
     padding: 20px;
     margin-bottom: 1em;
-    border: 1px solid #f02222;
+    border-radius: 15px;
+    border: 1px solid #fff;
   }
   #login-alert.blue {
     background-color: #386ab4;
     padding: 20px;
     margin-bottom: 1em;
+    border-radius: 15px;
     border: 1px solid #0f356d;    
   }
   #login-alert.orange {
     background-color: #d08b1f;
     padding: 20px;
     margin-bottom: 1em;
+    border-radius: 15px;
     border: 1px solid #ff9c00;    
   }
   #login-alert.green {
     background-color: #139f19;
     padding: 20px;
     margin-bottom: 1em;
+    border-radius: 15px;
     border: 1px solid #09f514;    
+  }
+  #toggle-btn {
+    display: flex;
+    width: 100%;
+  }
+  .verifying-msg {
+    background-color: #000;
   }
   #login-btn,
   #signup-btn,
-  #forgotpass-btn {
+  #forgotpass-btn,
+  #resetpass-btn,
+  .verifying-msg {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -462,7 +498,6 @@ p.logins {
         background-color: #000;
       }
     }
-    
     .login-verify {
       background-color: #000;
       display: flex;
